<resources>
    <string name="app_name" translatable="false">Training Hup</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Login</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password" translatable="false">Password</string>
    <string name="hint_name" translatable="false">Full name</string>
    <string name="btn_login" translatable="false">LOGIN</string>
    <string name="btn_register" translatable="false">REGISTER</string>


    <string name="btn_link_to_register" translatable="false">Not a member? Sign up now.</string>
    <string name="btn_link_to_login" translatable="false">Already registred! Login Me.</string>

    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">LOGIN</string>
    <string name="show_pwd" translatable="false">Show Password</string>
    <string name="hide_pwd" translatable="false">Hide Password</string>
    <string name="forgot" translatable="false">Forgot password?</string>
    <string name="closebutton" translatable="false">Close Button for Activity</string>
    <string name="newUser" translatable="false">Not a Member yet? Sign Up here.</string>
    <string name="fullName" translatable="false">Full Name</string>
    <string name="mobileNumber" translatable="false">Mobile Number</string>
    <string name="location" translatable="false">Location</string>
    <string name="confirmPassword" translatable="false">Confirm Password</string>
    <string name="terms_conditions" translatable="false">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp" translatable="false">SIGN UP</string>
    <string name="already_user" translatable="false">Already have Account? Login here.</string>
    <string name="registered_emailid" translatable="false">Please enter your Registered Email Id below:</string>
    <string name="login_to" translatable="false">Login and Explore</string>
    <string name="register_later" translatable="false">register later</string>
    <string name="birth_date" translatable="false">Birth Date</string>
    <string name="not_a_member_sign_up" translatable="false">Not a member? Sign up</string>
</resources>
